# flutter-btc-sdk

bitcoin_sdk/: README.md  bitcoin_sdk.h  ffigen.yaml  pubspec.yaml
bitcoin_sdk/android/: build.gradle  settings.gradle
bitcoin_sdk/android/src/main/: AndroidManifest.xml
bitcoin_sdk/android/src/main/kotlin/dev/flutterbtcsdk/bitcoin_sdk/: BitcoinSdkPlugin.kt
bitcoin_sdk/android/src/test/kotlin/dev/flutterbtcsdk/bitcoin_sdk/: BitcoinSdkPluginTest.kt
bitcoin_sdk/example/: README.md  pubspec.yaml
bitcoin_sdk/example/android/app/: build.gradle.kts
bitcoin_sdk/example/android/app/src/main/: AndroidManifest.xml
bitcoin_sdk/example/android/app/src/main/kotlin/dev/flutterbtcsdk/bitcoin_sdk_example/: MainActivity.kt
bitcoin_sdk/example/integration_test/: plugin_integration_test.dart
bitcoin_sdk/example/ios/Runner/: Info.plist
bitcoin_sdk/example/ios/Runner.xcodeproj/: project.pbxproj
bitcoin_sdk/example/ios/RunnerTests/: RunnerTests.swift
bitcoin_sdk/example/lib/: main.dart
bitcoin_sdk/example/test/: widget_test.dart
bitcoin_sdk/ios/: bitcoin_sdk.podspec
bitcoin_sdk/ios/Classes/: BitcoinSdkPlugin.swift
bitcoin_sdk/lib/: bitcoin_sdk.dart  bitcoin_sdk_method_channel.dart  bitcoin_sdk_platform_interface.dart
bitcoin_sdk/lib/src/: bitcoin_sdk_ffi.dart
bitcoin_sdk/rust/: Cargo.toml  bitcoin_sdk.h  build.rs  cbindgen.toml
bitcoin_sdk/rust/.cargo/: config.toml
bitcoin_sdk/rust/src/: lib.rs  transaction.rs  utils.rs  wallet.rs
bitcoin_sdk/scripts/: build_rust.sh
bitcoin_sdk/test/: bitcoin_sdk_method_channel_test.dart  bitcoin_sdk_test.dart
