[package]
name = "bitcoin_sdk_rust"
version = "0.1.0"
edition = "2021"

[lib]
name = "bitcoin_sdk_rust"
crate-type = ["cdylib", "staticlib"]

[dependencies]
# Bitcoin core dependencies
bitcoin = "0.31"
secp256k1 = { version = "0.28", features = ["rand", "recovery"] }
bip32 = "0.5"
bip39 = "2.0"

# Crypto and utilities
rand = "0.8"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# FFI
libc = "0.2"

[build-dependencies]
cbindgen = "0.26"

[profile.release]
lto = true
panic = "abort" 